// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bczRLJ sc-gsnTZi kyTPFR vZioU"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bczRLJ sc-gsnTZi bnMXoW vZioU"
>
  foo
</button>
`;
